--- a/FinalProjectVeronica.html
+++ b/FinalProjectVeronica.html
@@ -266,7 +266,7 @@ ctx.closePath();
 
          <div class="col">
            <h5> Short Biographical Info </h5>
-             I am currently a freshman at Brandeis University, I am 19 years old, and I am thinking about double majoring in Economics and Business or Computer Science. I appreciate all forms of art.
+             I am currently a freshman at Brandeis University, I am 19 years old, and I am thinking about double majoring in Economics and Business or Computer Science. Might minor in social justice idk. I appreciate all forms of art.
              I live with my father and two younger sisters in Woodhaven, New York (picture of one of my siblings to the left). That is all.
 
              <figure style="margin-top:10px">
