--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a href="CalcVeronica2.html">(calculator #2)</a>
         <a href="drawVeronica.html">(graphics)</a>
         <a href="mouseVeronica.html">(mouse)</a>
+        <a href="FinalProjectVeronica.html"> (final project)</a>
     </li>
     <li> Deja Freeman
         <a href="aboutDeja.html">(about)</a>
