--- a/FinalProjectVeronica.html
+++ b/FinalProjectVeronica.html
@@ -297,7 +297,7 @@ ctx.closePath();
              <div class="col">
                <figure style="margin-left:120px">
                  <img src="MirrorSelfie.JPG" width="220">
-                 <figcaption> Selfie, Date Unknown </figcaption>
+                 <figcaption> Someone's bathroom, Unknown Date </figcaption>
                </figure>
 
            </div>
