--- a/FinalProjectVeronica.html
+++ b/FinalProjectVeronica.html
@@ -252,12 +252,12 @@ ctx.closePath();
 
          <div class="col">
            <figure>
-             <img src="Judith.jpeg" alt="A picture of my sister, Judith, after graduation" width="330" >
+             <img src="Judith.jpeg" alt="A picture of my sister, Judith, after graduation" width="345" >
              <figcaption> Judith, After Graduation 06/19 </figcaption>
            </figure>
 
              <figure>
-               <img src="Guggenheim.jpeg" alt="Portrait, Solomon R. Guggenheim Museum" width="340" >
+               <img src="Guggenheim.jpeg" alt="Portrait, Solomon R. Guggenheim Museum" width="345" >
                <figcaption> Painting, Solomon R. Guggenheim Museum 07/17 </figcaption>
              </figure>
          </div>
@@ -309,7 +309,7 @@ ctx.closePath();
      <table class="table table-bordered table-striped" style="margin-top:5px">
 
       <thead>
-        <tr> <th> English Authors </th>   <th> Spanish Authors </th>
+         <tr> <th> <center> English Authors </center> </th>   <th><center> Spanish Authors </center></th>
       </thead>
 
       <tbody>
