--- a/FinalProjectVeronica.html
+++ b/FinalProjectVeronica.html
@@ -277,13 +277,13 @@ ctx.closePath();
 
          <div class="row">
            <div class="col">
-             <h5 style="margin-top:0px"> Random Facts About Me </h5>
+             <h5 style="margin-top:27px"> Random Facts About Me </h5>
                <ul>
                  <li> I used to swim competitively </li>
                  <li> I was in band from 3rd to 9th grade </li>
                  <li> I broke my right ankle twice </li>
                  <li> I was a founding member of my high school's Speech and Debate team (link below) </li>
-                 <li> I love watching BuzzFeed Unsolved (link below) </li>
+                 <li> I watch BuzzFeed Unsolved (link below) </li>
                </ul>
              <div class="col">
                <div class="wrapper">
@@ -296,7 +296,7 @@ ctx.closePath();
 
              <div class="col">
                <figure style="margin-left:120px">
-                 <img src="MirrorSelfie.JPG" width="220">
+                 <img src="MirrorSelfie.JPG" width="225">
                  <figcaption> Someone's bathroom, Unknown Date </figcaption>
                </figure>
 
