--- a/finalprojectDeja.html
+++ b/finalprojectDeja.html
@@ -19,7 +19,6 @@
         "You're MC is "
         +mc.toFixed(1)  // round MC to 1 decimal place
 
-
   }
   let canvas=null  // we give this a value in the init method
   let ctx=null
@@ -37,16 +36,18 @@ canvas.addEventListener('mousemove',mouseMove,false)
     console.dir(event)
     const x = event.offsetX
     const y = event.offsetY
-    //draw something here ...
+    ctx.fillStyle="rgba (175,122,197)";
+    ctx.strokeStyle="rgba (0,0,255,0.3)"
     ctx.fillRect(x,y,20,50)
+    drawDeja(x,y)
   }
 
   function mouseMove(event){
+    //console.log(event.buttons)
     const x = event.offsetX
     const y = event.offsetY
-    // put your own code in here!
-    if (event.buttons==1){ // only draw if they are pushing the button!
-        ctx.fillRect(x,y,10,20)
+    if (event.buttons==1){ //  see if the mouse button is pressed
+        drawDeja(x,y)
     }
 }
 
@@ -54,7 +55,7 @@ canvas.addEventListener('mousemove',mouseMove,false)
     // draw a circle centered at (x,y) with radius r
     ctx.beginPath();
     ctx.arc(x,y,r,0,2*Math.PI,true)
-    ctx.stroke()
+    ctx.stroke();
   }
 
   function drawCircles(){
@@ -77,22 +78,47 @@ canvas.addEventListener('mousemove',mouseMove,false)
     ctx.fillStyle=color
     ctx.beginPath();
     ctx.arc(x,y,r,0,2*Math.PI,true)
-    ctx.fill()
+    ctx.fill();
   }
-  function drawTim(){
+  function drawDeja(x,y){
+    ctx.fillStyle="rbga(175,122,197)"
+    ctx.strokeStyle="rgba(0,0,255,0.3)"
+    ctx.lineWidth=10
+    ctx.beginPath();
+    ctx.moveTo(200+x,101+y)
+    ctx.lineTo(199+x,160+y)
+    ctx.lineTo(239+x,160+y)
+    ctx.lineTo(241+x,149+y)
+    ctx.lineTo(240+x,141+y)
+    ctx.lineTo(238+x,130+y)
+    ctx.lineTo(234+x,122+y)
+    ctx.lineTo(231+x,116+y)
+    ctx.lineTo(228+x,111+y)
+    ctx.lineTo(223+x,107+y)
+    ctx.lineTo(219+x,102+y)
+    ctx.lineTo(214+x,99+y)
+    ctx.lineTo(202+x,98+y)
+    ctx.lineTo(214+x,99+y)
+    ctx.lineTo(202+x,98+y)
+    ctx.lineTo(200+x,159+y)
+    ctx.lineTo(176+x,197+y)
+    ctx.lineTo(270+x,197+y)
+    ctx.lineTo(240+x,162+y)
+    ctx.fill()
+    ctx.stroke()
+    ctx.closePath();
+  }
+  function draw0(){
     ctx.strokeStyle="blue"
     ctx.lineWidth=5
     ctx.beginPath()
-    ctx.moveTo(198,100)
-    ctx.lineTo(300,100)
-    ctx.lineTo(362,150)
-    ctx.lineTo(364,213)
-    ctx.lineTo(308,263)
-    ctx.lineTo(199,263)
-    ctx.lineTo(136,211)
-    ctx.lineTo(142,141)
-    ctx.lineTo(195,102)
+    ctx.lineTo(102,142)
+    ctx.lineTo(100,196)
+    ctx.lineTo(131,173)
+    ctx.lineTo(105,147)
     ctx.stroke()
+    ctx.lineWidth=1
+
   }
 
   </script>
@@ -130,11 +156,12 @@ canvas.addEventListener('mousemove',mouseMove,false)
 
      </div>
      <div class="col">
-       <h1>Buttons etc to draw on Canvas</h1>
+       <h1>Buttons for Canvas</h1>
        <button style="background:red; color:white"
                onclick="drawBackground()">Clear</button>
 
-       <br> <button onclick="drawTim()">Draw Tim</button>
+       <br> <button onclick="drawDeja()">Draw Deja</button>
+
        ....
      </div>
 
