--- a/mouseDeja.html
+++ b/mouseDeja.html
@@ -12,7 +12,7 @@
     canvas = document.getElementById('canvas')
     ctx = canvas.getContext('2d')
     drawBackground()
-    canvas.addEventListener('dblclick',mouseClick,false)
+    canvas.addEventListener('click',mouseClick,false)
     canvas.addEventListener('mousemove',mouseMove,false)
   }
 
@@ -34,8 +34,10 @@
     const x = event.offsetX
     const y = event.offsetY
     if (event.buttons==1){  // see if the mouse button is pressed
-      dejadraw(x,y)
+      ctx.fillRect(x,y,10,30)
+      ctx.fillRect(x-15,y,30,3)
       ctx.strokeStyle="rgba(0,0,255,0.3)"
+      dejadraw(x,y)
       drawCircle(x,y,50)
     }
   }
@@ -116,6 +118,7 @@
       ctx.beginPath();
       ctx.arc(x,y,r,0,2*Math.PI,true)
       ctx.fill()
+      ctx.fillCircle = "red"
     }
 
   </script>
@@ -126,7 +129,7 @@
  <br>
 
  <button onclick="drawBackground()">Clear</button>
- <button onclick="drawTim(200,200)">Draw</button>
+
 
  <canvas style="float:left;margin-right:30px"
          id="canvas" width="1500" height="1500">
