trying to fix click error

--- a/finalprojectDeja2.html
+++ b/finalprojectDeja2.html
@@ -85,25 +85,25 @@ canvas.addEventListener('mousemove',mouseMove,false)
     ctx.strokeStyle="rgba(0,0,255,0.5)"
     ctx.lineWidth=5
     ctx.beginPath()
-    ctx.moveTo(200+x,101+y)
-    ctx.lineTo(199+x,160+y)
-    ctx.lineTo(239+x,160+y)
-    ctx.lineTo(241+x,149+y)
-    ctx.lineTo(240+x,141+y)
-    ctx.lineTo(238+x,130+y)
-    ctx.lineTo(234+x,122+y)
-    ctx.lineTo(231+x,116+y)
-    ctx.lineTo(228+x,111+y)
-    ctx.lineTo(223+x,107+y)
-    ctx.lineTo(219+x,102+y)
-    ctx.lineTo(214+x,99+y)
-    ctx.lineTo(202+x,98+y)
-    ctx.lineTo(214+x,99+y)
-    ctx.lineTo(202+x,98+y)
-    ctx.lineTo(200+x,159+y)
-    ctx.lineTo(176+x,197+y)
-    ctx.lineTo(270+x,197+y)
-    ctx.lineTo(240+x,162+y)
+    ctx.moveTo(x+200,y+101)
+    ctx.lineTo(x+199,y+160)
+    ctx.lineTo(x+239,y+160)
+    ctx.lineTo(x+241,y+149)
+    ctx.lineTo(x+240,y+141)
+    ctx.lineTo(x+238,y+130)
+    ctx.lineTo(x+234,y+122)
+    ctx.lineTo(x+231,y+116)
+    ctx.lineTo(x+228,y+111)
+    ctx.lineTo(x+223,y+107)
+    ctx.lineTo(x+219,y+102)
+    ctx.lineTo(x+214,y+99)
+    ctx.lineTo(x+202,y+98)
+    ctx.lineTo(x+214,y+99)
+    ctx.lineTo(x+202,y+98)
+    ctx.lineTo(x+200,y+159)
+    ctx.lineTo(x+176,y+197)
+    ctx.lineTo(x+270,y+197)
+    ctx.lineTo(x+240,y+162)
     ctx.fill()
     ctx.stroke()
     ctx.closePath();
@@ -164,7 +164,7 @@ canvas.addEventListener('mousemove',mouseMove,false)
           <div class="row">
             <div class="col-md">
               <img width="200"
-                     src="deja.finialimage.jpeg">
+                     src="deja.finalimage.jpeg">
     </div>
 
 
