Final edits for project!

--- a/finalprojectDeja2.html
+++ b/finalprojectDeja2.html
@@ -85,25 +85,25 @@ canvas.addEventListener('mousemove',mouseMove,false)
     ctx.strokeStyle="rgba(0,0,255,0.5)"
     ctx.lineWidth=5
     ctx.beginPath()
-    ctx.moveTo(x+200,y+101)
-    ctx.lineTo(x+199,y+160)
-    ctx.lineTo(x+239,y+160)
-    ctx.lineTo(x+241,y+149)
-    ctx.lineTo(x+240,y+141)
-    ctx.lineTo(x+238,y+130)
-    ctx.lineTo(x+234,y+122)
-    ctx.lineTo(x+231,y+116)
-    ctx.lineTo(x+228,y+111)
-    ctx.lineTo(x+223,y+107)
-    ctx.lineTo(x+219,y+102)
-    ctx.lineTo(x+214,y+99)
-    ctx.lineTo(x+202,y+98)
-    ctx.lineTo(x+214,y+99)
-    ctx.lineTo(x+202,y+98)
-    ctx.lineTo(x+200,y+159)
-    ctx.lineTo(x+176,y+197)
-    ctx.lineTo(x+270,y+197)
-    ctx.lineTo(x+240,y+162)
+    ctx.moveTo(x+200-250,y-101+250)
+    ctx.lineTo(x+199-250,y-160+250)
+    ctx.lineTo(x+239-250,y-160+250)
+    ctx.lineTo(x+241-250,y-149+250)
+    ctx.lineTo(x+240-250,y-141+250)
+    ctx.lineTo(x+238-250,y-130+250)
+    ctx.lineTo(x+234-250,y-122+250)
+    ctx.lineTo(x+231-250,y-116+250)
+    ctx.lineTo(x+228-250,y-111+250)
+    ctx.lineTo(x+223-250,y-107+250)
+    ctx.lineTo(x+219-250,y-102+250)
+    ctx.lineTo(x+214-250,y-99+250)
+    ctx.lineTo(x+202-250,y-98+250)
+    ctx.lineTo(x+214-250,y-99+250)
+    ctx.lineTo(x+202-250,y-98+250)
+    ctx.lineTo(x+200-250,y-159+250)
+    ctx.lineTo(x+176-250,y-197+250)
+    ctx.lineTo(x+270-250,y-197+250)
+    ctx.lineTo(x+240-250,y-162+250)
     ctx.fill()
     ctx.stroke()
     ctx.closePath();
@@ -163,9 +163,24 @@ canvas.addEventListener('mousemove',mouseMove,false)
        <h1> Meet the Creator! </h1>
           <div class="row">
             <div class="col-md">
-              <img width="200"
+              <img width="500"
                      src="deja.finalimage.jpeg">
     </div>
+          <div class="col">
+            <p>
+              <br>Hello, My name is Deja Freeman and I am a first year student at Brandeis Univeristy.
+              I am planning on majoring in International and Global Studies, along with either Economics or Buisness.
+              This is my first time really coding, before this year I only had the basic understdning of coding.
+              Since then, thanks to my comp.sci class, I have expanded my understanding and can compute basic task and have truly enjoyed leanring about coding.</br>
+
+              <br>More on the personal side, I come from a mixed race household. Two of my siblings are like me, being Haitian, Mexican and White.
+              I love having a diverse background, it brings me a lot of pride, having diffrent orgins and history to look back on.
+              I was orignially born in Atlanta, Gerogia. Then moved to Boston in 2012 during the winter.
+              I really have been loving staying in Boston, but I do miss Gerogia alot. My goal is to travel there more often.
+              I also really love fighting for other people's right, i've worked in a non-profit for a few years. This really helped sparked my intrest in the social justice realm.
+              My biggest dream is to own a non-profit of my own, that works to protect citizens right agianst discrimation and unfair treatment.</br>
+            </p>
+
 
 
 
