--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="calcDeja2.html">(calculator two)</a>
         <a href="Dejadraw.html"> (Graphics)</a>
         <a href="mouseDeja.html"> (Mouse)</a>
-        <a href="finalprojectDeja.html"> (Final Project)</a>
+        <a href="finalprojectDeja2.html"> (Final Project)</a>
 
     </li>
     </ul>
